# genome-scraping

./: README.md  chromedriver_download.sh  genome-selenium-final-pls.py  genomesvn_crawler.py  pyproject.toml
constants/: constant_variables.py
input/: rsid_list.txt
output/: rsid_genomesvn.csv  test_csv_data.csv
src/: genomesvn_api_crawler.py  genomesvn_api_version.py  genomesvn_crawler.py  genomesvn_crawler_helper.py
